# Advent-of-code

./: .gitignore  README.md  README.txt
2024/Day1/: solution.lua
2024/Day10/: solution.lua
2024/Day11/: solution.lua
2024/Day12/: solution.lua
2024/Day13/: solution.lua
2024/Day14/: solution.lua
2024/Day15/: solution.lua
2024/Day16/: solution.lua
2024/Day17/: solution.lua
2024/Day18/: solution.lua
2024/Day19/: solution.lua
2024/Day2/: solution.lua
2024/Day20/: solution.lua
2024/Day21/: solution.lua
2024/Day3/: solution.lua
2024/Day4/: solution.lua
2024/Day5/: solution.lua
2024/Day6/: solution.lua
2024/Day7/: solution.lua
2024/Day8/: solution.lua
2024/Day9/: solution.lua
2025/Day1/: solution.lua
2025/Day10/: Gauss.lua  Node.lua  PriorityQueue.lua  Queues.lua  moreMath.lua  solution.lua
2025/Day11/: solution.lua
2025/Day12/: solution.lua
2025/Day2/: solution.lua
2025/Day3/: solution.lua
2025/Day4/: solution.lua
2025/Day5/: solution.lua
2025/Day6/: solution.lua
2025/Day7/: solution.lua
2025/Day8/: solution.lua  treeSets.lua
2025/Day9/: solution.lua
libraries/C++/: InputReader.cc  InputReader.h
libraries/C++/tests/: CMakeLists.txt  tests.cc
libraries/C++/tests/testFiles/: hiddenIntegers.txt  integers.txt  numbers.txt
